[metadata]
name = quakesrthorcam-tspspi
version = 0.0.2
author = Thomas Spielauer
author_email = pypipackages01@tspi.at
description = Mini utility that handles pictures taken for QUAK/ESR experiment by ThorCam camera
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tspspi/quakesrthorcam
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: Microsoft :: Windows

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    paho-mqtt >= 1.6.1
    thorcam >= 0.1.6
    Pillow >= 9.2.0
    paramiko >= 2.11.0
    pyopencl == 2021.2.9+cl12

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    thorbridge = quakesrthorcam.thorbridge:mainStartup
